# ProjectDungeon

./: .gitignore  CMakeLists.txt
assets/configs/: animations.json  tileset.json
assets/placeholder/: generate_tiles.py
cmake/: defines.cmake  find_cpm.cmake  git.cmake  version.hpp.in
include/pd/: constants.hpp  defines.hpp  playground.hpp
src/: defines.hpp  main.cpp
src-alt/: main.cpp
src-alt/accessor/: physics.cpp  physics.hpp  sprite.cpp  sprite.hpp  transform.cpp  transform.hpp
src-alt/attacher/: physics_body.cpp  physics_body.hpp  renderable.cpp  renderable.hpp  transform.cpp  transform.hpp
src-alt/blueprint/: def.hpp  floor.cpp  floor.hpp  room.cpp  room.hpp
src-alt/components/: asset_manager.hpp  chest.hpp  door.hpp  dungeon.hpp  floor.hpp  game.hpp  game_config.hpp  game_physics_world.hpp  game_world.hpp  physics.hpp  physics_body.hpp  physics_world.hpp  renderable.hpp  room.hpp  sprite.hpp  tags.hpp  tile.hpp  transform.hpp  world.hpp
src-alt/events/: chest.hpp  door.hpp  dungeon.hpp  floor.hpp  game.hpp  renderable.hpp  room.hpp  scene.hpp  window.hpp
src-alt/factory/: chest.cpp  chest.hpp  door.cpp  door.hpp  room.cpp  room.hpp
src-alt/game/: asset.hpp  config.hpp  constants.hpp  constants_map.hpp  dispatcher.hpp  game.cpp  game.hpp  menu_action.hpp  random.hpp  room.hpp  scene.hpp
src-alt/listener/: chest.cpp  chest.hpp  door.cpp  door.hpp  dungeon.cpp  dungeon.hpp  floor.cpp  floor.hpp  room.cpp  room.hpp
src-alt/manager/: asset.cpp  asset.hpp  asset_fwd.hpp  asset_manager.cpp  asset_manager.hpp  asset_manager_type.hpp  event.cpp  event.hpp  game_config.cpp  game_config.hpp  random.cpp  random.hpp
src-alt/render/: renderable.cpp  renderable.hpp  room.cpp  room.hpp
src-alt/scene/: game.cpp  game.hpp  main_menu.cpp  main_menu.hpp  quit_game.cpp  scene.cpp  scene.hpp  type.hpp
src-alt/systems/: asset_manager.cpp  asset_manager.hpp  chest.cpp  chest.hpp  dispatcher.cpp  dispatcher.hpp  door.cpp  door.hpp  dungeon.cpp  dungeon.hpp  floor.cpp  floor.hpp  game_config.cpp  game_config.hpp  game_physics_world.cpp  game_physics_world.hpp  game_world.cpp  game_world.hpp  physics_world.cpp  physics_world.hpp  room.cpp  room.hpp  tile.cpp  tile.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
src-alt/utility/: dispatcher.hpp  fixed_matrix.hpp  random.hpp  resource_cache.hpp  resource_cache_fwd.hpp  string_hash.hpp
src-new/: game.cpp  game.hpp  main.cpp
src-new/blueprint/: door.hpp  enemy.hpp  floor.hpp  level.hpp  player.hpp  projectile.hpp  room.hpp  wall.hpp
src-new/component/: actor.hpp  ai.hpp  camera.hpp  door.hpp  enemy.hpp  floor.hpp  physics_body.hpp  player.hpp  player_controller.hpp  position.hpp  projectile.hpp  room.hpp  screen.hpp  sprite.hpp  sprite_animation.hpp  sprite_effect.hpp  state.hpp  tags.hpp  transform.hpp  wall.hpp
src-new/designer/: door.cpp  door.hpp  enemy.cpp  enemy.hpp  floor.cpp  floor.hpp  level.cpp  level.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  room.cpp  room.hpp  wall.cpp  wall.hpp
src-new/event/: actor.hpp  camera.hpp  door.hpp  enemy.hpp  physics.hpp  player.hpp  projectile.hpp  room.hpp  scene.hpp  wall.hpp  window.hpp
src-new/factory/: door.cpp  door.hpp  enemy.cpp  enemy.hpp  floor.cpp  floor.hpp  level.cpp  level.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  room.cpp  room.hpp  wall.cpp  wall.hpp
src-new/helper/: sprite_animation.cpp  sprite_animation.hpp  sprite_effect.cpp  sprite_effect.hpp
src-new/listener/: actor.cpp  actor.hpp  camera.cpp  camera.hpp  door.cpp  door.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  room.cpp  room.hpp  wall.cpp  wall.hpp
src-new/manager/: asset.cpp  asset_fwd.hpp  audio_player.cpp  audio_player.hpp  i18n.cpp  i18n.hpp  resource.cpp  resource.hpp  resource_fwd.hpp
src-new/menu/: main.cpp  main.hpp  menu.cpp  menu.hpp  pause.cpp  pause.hpp
src-new/render/: camera.cpp  camera.hpp  door.cpp  door.hpp  enemy.cpp  enemy.hpp  floor.cpp  floor.hpp  health_mana_bar.cpp  health_mana_bar.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  wall.cpp  wall.hpp
src-new/scene/: category.hpp  game.cpp  game.hpp  main_menu.cpp  main_menu.hpp  scene.cpp  scene.hpp
src-new/update/: actor.cpp  actor.hpp  ai.cpp  ai.hpp  camera.cpp  camera.hpp  graveyard.cpp  graveyard.hpp  physics_world.cpp  physics_world.hpp  player_controller.cpp  player_controller.hpp  process_physics_events.cpp  process_physics_events.hpp  projectile.cpp  projectile.hpp  sprite_animation.cpp  sprite_animation.hpp  sprite_effect.cpp  sprite_effect.hpp  sync_physics_transform.cpp  sync_physics_transform.hpp
src-new/utility/: physics.hpp
src-new/var/: audio.hpp  key_action_mapper.hpp  window.hpp
src/asset/: asset_loader.hpp  font.cpp  font.hpp  font_loader.cpp  font_loader.hpp  loader.cpp  loader.hpp  manager.hpp  map.hpp  music.cpp  music.hpp  music_loader.cpp  music_loader.hpp  resource_cache.hpp  sound.cpp  sound.hpp  sound_loader.cpp  sound_loader.hpp  texture.cpp  texture.hpp  texture_loader.cpp  texture_loader.hpp
src/blueprint/: animation.cpp  animation.hpp  enemy.cpp  enemy.hpp  flip_animation.hpp
src/components/: actor.hpp  animation.hpp  direction.hpp  dungeon.hpp  flip_animation.hpp  game.hpp  level.hpp  name.hpp  physics_body.hpp  player.hpp  render.hpp  room.hpp  tags.hpp  transform.hpp  world.hpp
src/config/: animation.cpp  animation.hpp  collision_mask.hpp  config_reader.cpp  config_reader.hpp  dungeon.cpp  dungeon.hpp  enemy.cpp  enemy.hpp  flip_animation.hpp  level.cpp  level.hpp  player.cpp  player.hpp  position.hpp  render_layer.hpp  room.cpp  room.hpp  set.hpp  tile.cpp  tile.hpp  types.hpp  wall.cpp  wall.hpp
src/ctx/: animation.cpp  animation.hpp  asset_loader.hpp  font.cpp  font.hpp  map.hpp  music.cpp  music.hpp  physics_world.cpp  physics_world.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp  world.cpp  world.hpp
src/factory/: enemy.cpp  enemy.hpp  player.cpp  player.hpp
想法&计划/: 关卡.md  各个文件夹作用.md  地下城.md  总体架构.md  房间.md  敌人.md  武器.md  玩家.md  碰撞.md  门.md
(+178 files in other folders)
